# heimdall

./: .env.example  .envrc  .gitignore  Dockerfile  README.md  REDIS_MAPPING_QUERY_GUIDE.md  SPEC.md  TODO.md  docker-compose.yml  flake.nix  justfile  main.py  pyproject.toml
.github/workflows/: build-container.yaml  generate-openapi.yml
app/: background_tasks.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  settings.py  tracing.py
app/common/: __init__.py  pagination.py
app/models/: __init__.py  base.py  models.py
app/routers/: __init__.py  actions.py  groups.py  health.py  mappings.py  memberships.py  roles.py  users.py
app/services/: action.py  audit.py  auth.py  base.py  cache.py  cerbos.py  database_monitor.py  failed_operation.py  group.py  health_monitor.py  mapping.py  membership.py  policy_change_detector.py  policy_invalidator.py  policy_version_tracker.py  redis_mapping.py  role.py  user.py
docker/: init-db.sql
docker/otel/: collector-config.yaml
docs/api/: README.md  openapi.json  openapi.yaml
k8s/prod/: resources.yaml
k8s/staging/: resources.yaml
migrations/: env.py
migrations/versions/: 06f6b9ab1091_add_failedoperation_table_for_retry_.py  167af1e07140_remove_app_settings_table_after_config_.py  6450b6a24d0c_add_roleaction_table_for_role_action_.py  9fb1ac999ec3_initial_tables.py
scripts/: README_sync.md  config.example.json  generate_openapi.py  manage_openapi_mappings.py  sync_environments.py
